--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -60,6 +60,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Scenes\Test Cube\Scripts\CubeRotator.cs" />
     <Compile Include="Assets\Scenes\Test Cube\Scripts\MakePyramid.cs" />
     <Compile Include="Assets\Scenes\Test Cube\Scripts\MakeSphereHemisphere.cs" />
     <Compile Include="Assets\Scenes\Test Cube\Scripts\MakeTorus.cs" />
