--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -68,6 +68,7 @@
     <Compile Include="Assets\Scenes\Test Cube\Scripts\ManualPipeGenerator.cs" />
     <Compile Include="Assets\Scenes\Test Cube\Scripts\PipeNode.cs" />
     <Compile Include="Assets\Scenes\Test Cube\Scripts\ScriptedPipeGenerator.cs" />
+    <Compile Include="Assets\Scripts\GameObjectExtensions.cs" />
     <Compile Include="Assets\Scripts\PauseEditor.cs" />
     <Compile Include="Assets\Scripts\ShowNormals.cs" />
     <None Include="Assets\ThirdParty\UCLAGameLab\Wireframe\Shaders\UCLA GameLab Wireframe Functions.cginc" />
